Parameters of URLs after a literal question mark not recognized as part of URL
Hello everyone,
I noticed a small bug in gnome-terminal when I hover a link with my mouse
Instead to open "https://material.angular.io/?theme=deeppurple-amber", it open "https://material.angular.io/"
A regex don't seem to work properly ;) I'm currently on Zorin-OS 16, I don't think it's only on this specific OS
Téo
Edited by Andre Klapper