regex: Fix path-less URL recognition

URLs are allowed to contain the query ('?') or fragment ('#') directly
after the hostname without a path or even a path separator ('/'), so fix
the regexes to recognise these URLs.

Fixes: https://gitlab.gnome.org/GNOME/gnome-terminal/-/issues/7888